--- a/src/final.html
+++ b/src/final.html
@@ -758,6 +758,69 @@
 
             </div>
           </div>
+          <div class="final__summary-card">
+            <h3 class="final__summary-card-heading">Water intake</h3>
+            <div class="final__summary-card-water-img-wrap">
+              <div class="bottle-container">
+                <div >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 72" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g id="bottle-semi-bottle-semi" transform="translate(-90 0)" height="100%">
+                <path id="bottle-semi-bottle-4_2" d="M98,1c-.5523,0-1,.44772-1,1v2.79815c0,.33435-.1671.64658-.4453.83205L90.8906,9.40627C90.3342,9.7772,90,10.4017,90,11.0704L90,13v.5v54.5c0,2.2091,1.7909,4,4,4h6.146c.523,0,1.002-.2957,1.236-.7639.255-.5093.981-.5093,1.236,0c.234.4682.713.7639,1.236.7639h6.146c2.209,0,4-1.7909,4-4v-54.5-.5-1.9296c0-.6687-.334-1.2932-.891-1.66413L107.445,5.6302c-.278-.18547-.445-.4977-.445-.83205L107,2c0-.55228-.448-1-1-1h-8Z" clip-rule="evenodd" fill="#1d3e59" fill-rule="evenodd"></path>
+                <path id="bottle-semi-cap-4" d="M96,1c0-.552285.4477-1,1-1h10c.552,0,1,.447715,1,1v1c0,.55228-.448,1-1,1h-10c-.5523,0-1-.44772-1-1v-1Z" fill="#277ea2"></path>
+                </g>
+                </svg>
+                <span ></span>
+                </div>
+                <div >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 72" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g id="bottle-semi-bottle-semi" transform="translate(-90 0)">
+                <path id="bottle-semi-bottle-4_2" d="M98,1c-.5523,0-1,.44772-1,1v2.79815c0,.33435-.1671.64658-.4453.83205L90.8906,9.40627C90.3342,9.7772,90,10.4017,90,11.0704L90,13v.5v54.5c0,2.2091,1.7909,4,4,4h6.146c.523,0,1.002-.2957,1.236-.7639.255-.5093.981-.5093,1.236,0c.234.4682.713.7639,1.236.7639h6.146c2.209,0,4-1.7909,4-4v-54.5-.5-1.9296c0-.6687-.334-1.2932-.891-1.66413L107.445,5.6302c-.278-.18547-.445-.4977-.445-.83205L107,2c0-.55228-.448-1-1-1h-8Z" clip-rule="evenodd" fill="#1d3e59" fill-rule="evenodd"></path>
+                <path id="bottle-semi-cap-4" d="M96,1c0-.552285.4477-1,1-1h10c.552,0,1,.447715,1,1v1c0,.55228-.448,1-1,1h-10c-.5523,0-1-.44772-1-1v-1Z" fill="#277ea2"></path>
+                </g>
+                </svg>
+                <span ></span>
+                </div>
+                <div >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 72" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g id="bottle-semi-bottle-semi" transform="translate(-90 0)">
+                <path id="bottle-semi-bottle-4_2" d="M98,1c-.5523,0-1,.44772-1,1v2.79815c0,.33435-.1671.64658-.4453.83205L90.8906,9.40627C90.3342,9.7772,90,10.4017,90,11.0704L90,13v.5v54.5c0,2.2091,1.7909,4,4,4h6.146c.523,0,1.002-.2957,1.236-.7639.255-.5093.981-.5093,1.236,0c.234.4682.713.7639,1.236.7639h6.146c2.209,0,4-1.7909,4-4v-54.5-.5-1.9296c0-.6687-.334-1.2932-.891-1.66413L107.445,5.6302c-.278-.18547-.445-.4977-.445-.83205L107,2c0-.55228-.448-1-1-1h-8Z" clip-rule="evenodd" fill="#1d3e59" fill-rule="evenodd"></path>
+                <path id="bottle-semi-cap-4" d="M96,1c0-.552285.4477-1,1-1h10c.552,0,1,.447715,1,1v1c0,.55228-.448,1-1,1h-10c-.5523,0-1-.44772-1-1v-1Z" fill="#277ea2"></path>
+                </g>
+                </svg>
+                <span ></span>
+                </div>
+                <div >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 72" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g id="bottle-semi-bottle-semi" transform="translate(-90 0)">
+                <path id="bottle-semi-bottle-4_2" d="M98,1c-.5523,0-1,.44772-1,1v2.79815c0,.33435-.1671.64658-.4453.83205L90.8906,9.40627C90.3342,9.7772,90,10.4017,90,11.0704L90,13v.5v54.5c0,2.2091,1.7909,4,4,4h6.146c.523,0,1.002-.2957,1.236-.7639.255-.5093.981-.5093,1.236,0c.234.4682.713.7639,1.236.7639h6.146c2.209,0,4-1.7909,4-4v-54.5-.5-1.9296c0-.6687-.334-1.2932-.891-1.66413L107.445,5.6302c-.278-.18547-.445-.4977-.445-.83205L107,2c0-.55228-.448-1-1-1h-8Z" clip-rule="evenodd" fill="#1d3e59" fill-rule="evenodd"></path>
+                <path id="bottle-semi-cap-4" d="M96,1c0-.552285.4477-1,1-1h10c.552,0,1,.447715,1,1v1c0,.55228-.448,1-1,1h-10c-.5523,0-1-.44772-1-1v-1Z" fill="#277ea2"></path>
+                </g>
+                </svg>
+                <span></span>
+                </div>
+                <div >
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 72" shape-rendering="geometricPrecision" text-rendering="geometricPrecision">
+                <g id="bottle-semi-bottle-semi" transform="translate(-90 0)">
+                <path id="bottle-semi-bottle-4_2" d="M98,1c-.5523,0-1,.44772-1,1v2.79815c0,.33435-.1671.64658-.4453.83205L90.8906,9.40627C90.3342,9.7772,90,10.4017,90,11.0704L90,13v.5v54.5c0,2.2091,1.7909,4,4,4h6.146c.523,0,1.002-.2957,1.236-.7639.255-.5093.981-.5093,1.236,0c.234.4682.713.7639,1.236.7639h6.146c2.209,0,4-1.7909,4-4v-54.5-.5-1.9296c0-.6687-.334-1.2932-.891-1.66413L107.445,5.6302c-.278-.18547-.445-.4977-.445-.83205L107,2c0-.55228-.448-1-1-1h-8Z" clip-rule="evenodd" fill="#1d3e59" fill-rule="evenodd"></path>
+                <path id="bottle-semi-cap-4" d="M96,1c0-.552285.4477-1,1-1h10c.552,0,1,.447715,1,1v1c0,.55228-.448,1-1,1h-10c-.5523,0-1-.44772-1-1v-1Z" fill="#277ea2"></path>
+                </g>
+                </svg>
+                <span></span>
+                </div>
+              </div>
+              <div class="final__summary-card-water-intake">
+                <p class="final__summary-card-heading final__summary-card-heading--water"><span class="water-intake-value">3.2</span> L</p>
+                <p class="water-intake-desc">your recommended water intake</p>
+              </div>
+            </div>
+            <div class="final__summary-desc final__summary-water-bottom">
+              Based on the WHO, <span class="final__summary-desc--bold">the typycal daily water loss is between <span class="final__summary-desc--colored">2.5</span> and <span class="final__summary-desc--colored">3 L</span></span> , and <span class="final__summary-desc--colored">0.7 L </span><span class="final__summary-desc--bold">of water daily is supplied through food.</span>
+              <svg class="final__summary-bmi-bottom-logo">
+                <use href="./images/symbol-defs.svg#who-logo">
+                </use>
+              </svg>
+            </div>
+          </div>
         </div>
       </section>
     </main>
