--- a/src/final.html
+++ b/src/final.html
@@ -946,6 +946,87 @@ Recipes</h3>
               </div>
             </div>
           </div>
+          <div class="final__summary-social-wrap">
+            <svg viewBox="0 0 345 471" fill="none">
+<g id="achievments">
+<g id="twitter">
+<circle id="tw-elipse-stroke_2" cx="269.5" cy="395.5" r="75" stroke="#fff" stroke-opacity="0.2"></circle>
+<circle id="tw-elipse-stroke_1" cx="269.5" cy="395.5" r="60" stroke="#fff" stroke-opacity="0.4"></circle>
+<g id="tw-elipse-color">
+<circle cx="269.5" cy="395.5" r="45.5" fill="#1DA1F2"></circle>
+<circle cx="269.5" cy="395.5" r="45" stroke="white" stroke-opacity="0.6"></circle>
+</g>
+<g id="twitter-icon">
+<path id="Vector" d="M280.643 372.937C279.808 373.307 278.911 373.557 277.968 373.67C278.941 373.088 279.669 372.172 280.016 371.092C279.102 371.635 278.101 372.017 277.058 372.222C276.356 371.473 275.427 370.976 274.414 370.81C273.402 370.643 272.362 370.815 271.457 371.299C270.552 371.784 269.833 372.553 269.41 373.489C268.988 374.424 268.886 375.473 269.12 376.472C267.268 376.379 265.456 375.898 263.801 375.059C262.147 374.22 260.688 373.043 259.518 371.604C259.118 372.294 258.888 373.094 258.888 373.946C258.888 374.713 259.076 375.468 259.438 376.145C259.799 376.821 260.322 377.398 260.96 377.824C260.22 377.801 259.497 377.601 258.85 377.241V377.301C258.85 378.377 259.222 379.419 259.903 380.252C260.584 381.085 261.533 381.656 262.587 381.869C261.901 382.055 261.181 382.082 260.483 381.949C260.781 382.875 261.36 383.684 262.14 384.264C262.921 384.844 263.863 385.165 264.835 385.183C263.185 386.478 261.147 387.181 259.049 387.178C258.677 387.178 258.306 387.156 257.937 387.113C260.066 388.482 262.545 389.209 265.077 389.206C273.647 389.206 278.332 382.108 278.332 375.952C278.332 375.752 278.327 375.55 278.318 375.35C279.229 374.691 280.016 373.875 280.641 372.94L280.643 372.937Z" fill="white"></path>
+</g>
+</g>
+<g id="facebook">
+<circle id="fb-elipse-stroke_2" cx="75.5" cy="395.5" r="75" stroke="#fff" stroke-opacity="0.2"></circle>
+<circle id="fb-elipse-stroke_1" cx="75.5" cy="395.5" r="60" stroke="#fff" stroke-opacity="0.4"></circle>
+<g id="fb-elipse-blue">
+<circle cx="75.5" cy="395.5" r="45.5" fill="#1877F2"></circle>
+<circle cx="75.5" cy="395.5" r="45" stroke="white" stroke-opacity="0.6"></circle>
+</g>
+<g id="facebook-icon" clip-path="url(#clip0_1230_216)">
+<path id="Vector_2" d="M70.5739 394V380.862H67V376.131H70.5739V372.091C70.5739 368.916 72.685 366 77.5494 366C79.5189 366 80.9753 366.184 80.9753 366.184L80.8606 370.601C80.8606 370.601 79.3753 370.587 77.7545 370.587C76.0003 370.587 75.7193 371.373 75.7193 372.677V376.131H81L80.7702 380.862H75.7193V394H70.5739Z" fill="white"></path>
+</g>
+</g>
+<g id="main-circle">
+<circle id="elipse-stroke_3" cx="172.5" cy="248.5" r="131" stroke="#fff" stroke-opacity="0.2"></circle>
+<circle id="elipse-stroke_2" cx="172.5" cy="248.5" r="116" stroke="#fff" stroke-opacity="0.4"></circle>
+<circle id="elipse-stroke_1" cx="172.5" cy="248.5" r="101" stroke="var(--social-circles-inner-stroke)" stroke-opacity="0.6"></circle>
+<circle id="avatar_1" cx="44" cy="182" r="20.5" stroke="#fff"></circle>
+<circle id="avatar_2" cx="30" cy="261" r="16.5" stroke="#fff"></circle>
+<circle id="avatar_3" cx="296" cy="158" r="25.5" stroke="#fff"></circle>
+<circle id="avatar_4" cx="316" cy="281" r="23.5" stroke="#fff"></circle>
+</g>
+<g id="instagram">
+<circle id="ig-elipse-stroke_2" cx="140.5" cy="75.5" r="75" stroke="#fff" stroke-opacity="0.2"></circle>
+<circle id="ig-elipse-stroke_1" cx="140.5" cy="75.5" r="60" stroke="#fff" stroke-opacity="0.4"></circle>
+<g id="ig-elipse-gradient">
+<circle cx="140.5" cy="75.5" r="45.5" fill="url(#paint0_linear_1230_216)"></circle>
+<circle cx="140.5" cy="75.5" r="45" stroke="white" stroke-opacity="0.6"></circle>
+</g>
+<g id="instagram-icon">
+<path id="Vector_3" d="M141 57.0946C138.85 57.0946 137.095 58.8495 137.095 60.9999C137.095 63.1503 138.85 64.9052 141 64.9052C143.15 64.9052 144.905 63.1503 144.905 60.9999C144.905 58.8495 143.15 57.0946 141 57.0946ZM152.713 60.9999C152.713 59.3827 152.727 57.7802 152.637 56.1659C152.546 54.2909 152.118 52.6268 150.747 51.2558C149.373 49.8817 147.712 49.4569 145.837 49.3661C144.22 49.2753 142.617 49.2899 141.003 49.2899C139.386 49.2899 137.783 49.2753 136.169 49.3661C134.294 49.4569 132.63 49.8847 131.259 51.2558C129.885 52.6298 129.46 54.2909 129.369 56.1659C129.278 57.7831 129.293 59.3856 129.293 60.9999C129.293 62.6141 129.278 64.2196 129.369 65.8339C129.46 67.7089 129.888 69.3729 131.259 70.744C132.633 72.118 134.294 72.5429 136.169 72.6337C137.786 72.7245 139.389 72.7098 141.003 72.7098C142.62 72.7098 144.223 72.7245 145.837 72.6337C147.712 72.5429 149.376 72.1151 150.747 70.744C152.121 69.37 152.546 67.7089 152.637 65.8339C152.73 64.2196 152.713 62.6171 152.713 60.9999ZM141 67.0087C137.675 67.0087 134.991 64.3251 134.991 60.9999C134.991 57.6747 137.675 54.9911 141 54.9911C144.325 54.9911 147.009 57.6747 147.009 60.9999C147.009 64.3251 144.325 67.0087 141 67.0087ZM147.255 56.1483C146.478 56.1483 145.851 55.5214 145.851 54.745C145.851 53.9686 146.478 53.3417 147.255 53.3417C148.031 53.3417 148.658 53.9686 148.658 54.745C148.658 54.9294 148.622 55.1119 148.552 55.2823C148.481 55.4527 148.378 55.6075 148.248 55.7378C148.117 55.8682 147.962 55.9715 147.792 56.042C147.622 56.1124 147.439 56.1486 147.255 56.1483Z" fill="white"></path>
+</g>
+</g>
+</g>
+<defs>
+<pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+<use xlink:href="#image0_1230_216" transform="translate(0 -0.25) scale(0.003125)"></use>
+</pattern>
+<pattern id="pattern1" patternContentUnits="objectBoundingBox" width="1" height="1">
+<use xlink:href="#image1_1230_216" transform="translate(0 -0.25) scale(0.003125)"></use>
+</pattern>
+<pattern id="pattern2" patternContentUnits="objectBoundingBox" width="1" height="1">
+<use xlink:href="#image2_1230_216" transform="translate(-0.25) scale(0.003125)"></use>
+</pattern>
+<pattern id="pattern3" patternContentUnits="objectBoundingBox" width="1" height="1">
+<use xlink:href="#image3_1230_216" transform="translate(-0.247664) scale(0.00311526)"></use>
+</pattern>
+<linearGradient id="paint0_linear_1230_216" x1="140.5" y1="30" x2="140.5" y2="121" gradientUnits="userSpaceOnUse">
+<stop stop-color="#751BCF"></stop>
+<stop offset="0.508333" stop-color="#B62586"></stop>
+<stop offset="1" stop-color="#EFAC59"></stop>
+</linearGradient>
+<clipPath id="clip0_1230_216">
+<rect width="14" height="28" fill="white" transform="translate(67 366)"></rect>
+</clipPath>
+</defs>
+            </svg>
+            <img class="final__summary-social-avatar-first" src="./images/avatar-1.png" alt="avatar-1">
+            <img class="final__summary-social-avatar-second" src="./images/avatar-2.png" alt="avatar-2">
+            <img class="final__summary-social-avatar-third" src="./images/avatar-3.png" alt="avatar-3">
+            <img class="final__summary-social-avatar-fourth" src="./images/avatar-4.png" alt="avatar-4">
+            <div class="final__summary-social-center">
+              <span class="final__summary-social-center-digits">23M+</span>
+              <span>users worldwide</span>
+            </div>
+            <span class="final__summary-social-digits-instagram">1.5M+</span>
+            <span class="final__summary-social-digits--facebook">3M+</span>
+            <span class="final__summary-social-digits--twitter">80k+</span>
+          </div>
         </div>
       </section>
     </main>
