final page done without links

--- a/src/final.html
+++ b/src/final.html
@@ -449,6 +449,21 @@
                 <span>Day 30</span>
               </div>
             </div>
+            <div class="help-modal__open-close-wrap"  data-modal="weight">
+                <a href="#" data-modal="weight" data-action="open" class="help-modal__open-button">
+                  <svg data-modal="weight" data-action="open" class="help-modal__open-button-img" >
+                    <use data-modal="weight" data-action="open" href="./images/symbol-defs.svg#icon-question"></use>
+                  </svg>
+                </a>
+                <a href="#" data-modal="weight" data-action="close" class="help-modal__close-button">
+                  <svg data-modal="weight" data-action="close" class="help-modal__close-button-img">
+                    <use data-modal="weight" data-action="close"  href="./images/symbol-defs.svg#icon-close-modal"></use>
+                  </svg>
+                </a>
+            </div>
+            <div class="final__help-modal-wrap" data-modal="weight">
+              <p>Fat loss is not a linear process. You may lose weight and fat more rapidly at the beginning and then this process slows down with time. That’s totally fine and normal, so don’t discourage! Rapid weight loss isn’t always better! Be patient and strict in your meal plan!</p>
+            </div>
             </div>
             <div class="final__summary-card">
               <h3 class="final__summary-card-heading">Body change estimates </h3>
@@ -587,6 +602,21 @@
               <div class="summary-card__body-bottom">
                 <span class="summary-card__body-bottom--bold">Based on other users' success</span>  with the same metabolic type
               </div>
+              <div data-modal="body" class="help-modal__open-close-wrap" >
+                <a href="#" data-modal="body" data-action="open" class="help-modal__open-button">
+                  <svg data-modal="body" data-action="open" class="help-modal__open-button-img" >
+                    <use data-modal="body" data-action="open" href="./images/symbol-defs.svg#icon-question"></use>
+                  </svg>
+                </a>
+                <a href="#" data-modal="body" data-action="close" class="help-modal__close-button">
+                  <svg data-modal="body" data-action="close" class="help-modal__close-button-img">
+                    <use data-modal="body" data-action="close"  href="./images/symbol-defs.svg#icon-close-modal"></use>
+                  </svg>
+                </a>
+            </div>
+            <div class="final__help-modal-wrap" data-modal="body">
+              <p>By following your keto meal plan, you will optimize body composition and lose fat overall. But let’s be honest – you can’t spot reduce, because fat loss doesn’t work that way. Women usually lose fat lastly from the lower body, and man – from the abdominal area. Fat loss rate isn’t equal for the different body parts and it’s determined by genes, hormones, etc.</p>
+            </div>
             </div>
             <div class="final__summary-card final__people-summary-card">
               <div class="summary-card__people-head">
@@ -748,6 +778,21 @@
                   </use>
                 </svg>
               </div>
+              <div data-modal="bmi" class="help-modal__open-close-wrap" >
+                <a href="#" data-modal="bmi" data-action="open" class="help-modal__open-button">
+                  <svg data-modal="bmi" data-action="open" class="help-modal__open-button-img" >
+                    <use data-modal="bmi" data-action="open" href="./images/symbol-defs.svg#icon-question"></use>
+                  </svg>
+                </a>
+                <a href="#" data-modal="bmi" data-action="close" class="help-modal__close-button">
+                  <svg data-modal="bmi" data-action="close" class="help-modal__close-button-img">
+                    <use data-modal="bmi" data-action="close"  href="./images/symbol-defs.svg#icon-close-modal"></use>
+                  </svg>
+                </a>
+            </div>
+            <div class="final__help-modal-wrap" data-modal="bmi">
+              <p>Body Mass Index (BMI) is an established measure utilized by physicians and health experts to determine weight status (i.e. underweight, overweight or within a healthy weight range).</p>
+            </div>
             </div>
             <!-- <div class="final__summary-card">
               <h3 class="final__summary-card-heading">Metabolic Age</h3>
@@ -760,6 +805,21 @@
               <div class="calorie_animations">
   
               </div>
+              <div data-modal="bmr" class="help-modal__open-close-wrap" >
+                <a href="#" data-modal="bmr" data-action="open" class="help-modal__open-button">
+                  <svg data-modal="bmr" data-action="open" class="help-modal__open-button-img" >
+                    <use data-modal="bmr" data-action="open" href="./images/symbol-defs.svg#icon-question"></use>
+                  </svg>
+                </a>
+                <a href="#" data-modal="bmr" data-action="close" class="help-modal__close-button">
+                  <svg data-modal="bmr" data-action="close" class="help-modal__close-button-img">
+                    <use data-modal="bmr" data-action="close"  href="./images/symbol-defs.svg#icon-close-modal"></use>
+                  </svg>
+                </a>
+            </div>
+            <div class="final__help-modal-wrap" data-modal="bmr">
+              <p>Calories are within a recommended range of +/-100 as it is practically impossible to track them exactly. While following a calorie-restricted meal plan, the calories you consume must not fall below this value. Your daily calories are calculated based on your target weight, your current measurements, your physical activity and your lifestyle.</p>
+            </div>
             </div>
             <div class="final__summary-card">
               <h3 class="final__summary-card-heading">Water intake</h3>
@@ -823,6 +883,21 @@
                   </use>
                 </svg>
               </div>
+              <div data-modal="water" class="help-modal__open-close-wrap" >
+                <a href="#" data-modal="water" data-action="open" class="help-modal__open-button">
+                  <svg data-modal="water" data-action="open" class="help-modal__open-button-img" >
+                    <use data-modal="water" data-action="open" href="./images/symbol-defs.svg#icon-question"></use>
+                  </svg>
+                </a>
+                <a href="#" data-modal="water" data-action="close" class="help-modal__close-button">
+                  <svg data-modal="water" data-action="close" class="help-modal__close-button-img">
+                    <use data-modal="water" data-action="close"  href="./images/symbol-defs.svg#icon-close-modal"></use>
+                  </svg>
+                </a>
+            </div>
+            <div class="final__help-modal-wrap" data-modal="water">
+              <p>It may look excessive to you but it has been scientifically proven that water consumption should be this quantity.</p>
+            </div>
             </div>
             <div class="final__summary-card final__summary-card-recipes">
               <h3 class="final__summary-card-heading final__summary-card-heading--recipes"><span class="final__summary-card-heading-bmi--color">1000+</span><br>
@@ -1026,6 +1101,30 @@ Recipes</h3>
             <span class="final__summary-social-digits-instagram">1.5M+</span>
             <span class="final__summary-social-digits--facebook">3M+</span>
             <span class="final__summary-social-digits--twitter">80k+</span>
+          </div>
+          <div class="final__summary-promises">
+            <h1 class="promise__title">Our promises</h1>
+            <ul class="promise__list">
+              <li class="promise__list_item">
+                <span class="promise__list-img"> <img  src="./images/promises.svg" alt="check-img"></span>
+                <p>Easy-to-follow meal plan</p>
+              </li>
+              <li class="promise__list_item">
+                <span class="promise__list-img"> <img src="./images/promises.svg" alt=""></span>
+                <p>Personalized solution for sustainable results</p>
+              </li>
+              <li class="promise__list_item">
+                <span class="promise__list-img"> <img src="./images/promises.svg" alt=""></span>
+                <p>High-quality step-by-step videos for each recipe</p>
+              </li>
+                <li class="promise__list_item"> 
+                  <span class="promise__list-img"> <img src="./images/promises.svg" alt=""></span>
+                <p>Weekly shopping list </p>
+              </li>
+            </ul>
+          </div>
+          <div class="final__summary-button-wrap final__summary-button-wrap--last">
+            <button class="final__summary-button">GET KETO DIET</button>
           </div>
         </div>
       </section>
