--- a/src/final.html
+++ b/src/final.html
@@ -29,7 +29,7 @@
           <div class="final__hero-cta-wrap">
             <h2 class="final__hero-cta-heading">YOUR PERSONAL KETO DIET IS READY</h2>
             <div class="final__hero-button-wrap">
-              <button class="final__hero-button">GET KETO DIET</button>
+              <a href="#registration" class="final__hero-button">GET KETO DIET</a>
             </div>
           </div>
           <div class="final__hero-phone-wrap">
@@ -1124,7 +1124,7 @@ Recipes</h3>
             </ul>
           </div>
           <div class="final__summary-button-wrap final__summary-button-wrap--last">
-            <button class="final__summary-button">GET KETO DIET</button>
+            <a href="./registration.html" id="registration" class="final__summary-button">GET KETO DIET</a>
           </div>
         </div>
       </section>
