--- a/src/final.html
+++ b/src/final.html
@@ -1124,7 +1124,7 @@ Recipes</h3>
             </ul>
           </div>
           <div class="final__summary-button-wrap final__summary-button-wrap--last">
-            <a href="./registration.html" id="registration" class="final__summary-button">GET KETO DIET</a>
+            <a href="../src/registration.html" id="registration" class="final__summary-button">GET KETO DIET</a>
           </div>
         </div>
       </section>
