--- a/src/registration.html
+++ b/src/registration.html
@@ -36,7 +36,10 @@
               <div class="heading-circle--third"></div>
               <div class="heading-circle__content back">
                 <svg class="heading__logo">
-                  <use class="heading__logo-svg"></use>
+                  <use
+                    class="heading__logo-svg"
+                    href="./images/symbol-defs.svg#icon-emailfill"
+                  ></use>
                 </svg>
               </div>
             </div>
@@ -48,11 +51,11 @@
       </section>
       <section class="section quiz__section reg__section">
         <div class="container reg-container quiz-container quiz-container--card">
-          <form action="">
+          <form action="#" class="reg__form">
             <p class="reg__form-desc">
               Enter the e-mail address you want to receive your meal plan on:
             </p>
-            <div class="measurements__form-input-wrap">
+            <div class="measurements__form-input-wrap reg__form-input-wrap">
               <input
                 class="measurements__form-input reg__form-input"
                 type="email"
@@ -62,83 +65,39 @@
                 autocomplete="off"
               />
               <label class="measurements__form-label" for="email">Email</label>
-              <span></span> <span class="measurements__form-bottom-line"></span>
-              <div class="measurements__form-notification" data-type="imperial-age"></div>
-              <div class="measurements__form-button-wrap measurements__form-button-wrap--female">
-                <button type="submit" class="measurements__form-button" data-action="imperial">
-                  Continue<svg class="measurements__form-button-icon">
-                    <use href="./images/symbol-defs.svg#icon-next"></use>
-                  </svg>
-                </button>
-              </div>
+              <span></span>
+              <span class="measurements__form-bottom-line reg__form-input-bottom-line"></span>
+              <div class="measurements__form-notification reg__form-input-notification"></div>
+            </div>
+            <div class="reg__form-checkbox-wrap">
+              <label class="reg__form-checkbox-label" for="checkbox">
+                <input
+                  class="reg__form-checkbox visually-hidden"
+                  type="checkbox"
+                  id="checkbox"
+                  required=""
+                  checked
+                />
+                <span class="reg__form-checkbox-custom"></span>
+                <span class="reg__form-checkbox-label-text"
+                  >I agree with
+                  <a class="reg__form-link" href="../src/conditions.html">
+                    Terms and Conditions</a
+                  ></span
+                >
+              </label>
+            </div>
+            <div class="reg__button-wrap">
+              <button type="submit" class="reg__button">
+                Continue<svg class="reg__button-icon">
+                  <use href="./images/symbol-defs.svg#icon-next"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
       </section>
-      <!-- <section class="section progress__section">
-        <div class="container progress__container">
-          <div class="progress__percentage"><span class="progress__percentage-value">0</span>%</div>
-          <div class="progress__wrap">
-            <a
-              type="button"
-              class="progress__button-link progress__button-link--back"
-              href="/index.html"
-            >
-              <svg class="progress__button-icon">
-                <use
-                  class="progress__button-svg"
-                  href="./images/symbol-defs.svg#icon-back-circled"
-                ></use></svg
-              >Back
-            </a>
-            <div class="progress-bar__wrap">
-              <div class="progress-bar__line">
-                <div class="progress-bar__line-back"></div>
-                <div class="progress-bar__line-done"></div>
-              </div>
-              <div class="progress-bar__dot">
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Gender</span>
-                </div>
-              </div>
-            </div>
-            <button type="button" class="progress__button-link">
-              Help<svg class="progress__button-icon progress__button-icon--help">
-                <use
-                  class="progress__button-svg"
-                  href="./images/symbol-defs.svg#icon-help-thinner"
-                ></use>
-              </svg>
-            </button>
-          </div>
-        </div>
-      </section> -->
     </main>
-    <!-- <footer class="section footer__section">
-      <div class="container footer__container">
-        <ul class="footer__menu">
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Блог</a></li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Политика защиты данных</a>
-          </li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Обработка куки-файлов</a>
-          </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
-        </ul>
-        <a class="logo-link logo-link--footer" href="./index.html"
-          ><svg class="logo logo--footer">
-            <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-          </svg>
-        </a>
-        <div class="footer__license-wrap">
-          <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано Dimas IT</p>
-        </div>
-      </div>
-    </footer> -->
-    <!-- <script src="./index.js"></script> -->
-    <!-- <script src="./quiz.js"></script> -->
+    <script src="./registration.js"></script>
   </body>
 </html>
