--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,15 @@
       <section class="section select-gender__section">
         <div class="container">
           <h1 class="select-gender__heading">
-            Узнайте, сколько килограмм вы сможете сбросить с Keto диетой
+            Find out how much weight you can lose with Keto diet
           </h1>
-          <h2 class="select-gender__list-title">Следуйте этим шагам:</h2>
+          <h2 class="select-gender__list-title">Follow the steps below:</h2>
           <ol class="select-gender__list" id="gender__box">
-            <li class="select-gender__list-item">Выберите пол</li>
-            <li class="select-gender__list-item">Выберите любимые продукты</li>
-            <li class="select-gender__list-item">Выберите наиболее близкий к вашему образ жизни</li>
-            <li class="select-gender__list-item">Введите свои параметры</li>
-            <li class="select-gender__list-item">Получите персонализированный план питания</li>
+            <li class="select-gender__list-item">Select your gender</li>
+            <li class="select-gender__list-item">Pick your favorite foods</li>
+            <li class="select-gender__list-item">Categorize your lifestyle</li>
+            <li class="select-gender__list-item">Enter your measurements</li>
+            <li class="select-gender__list-item">Get your personalized plan</li>
           </ol>
           <div class="select-gender__box">
             <a href="./quiz.html" class="select-gender__wrap select-gender__wrap--female">
@@ -61,10 +61,10 @@
                 <svg class="select-gender__button-content-icon">
                   <use href="./images/symbol-defs.svg#icon-gender-women"></use>
                 </svg>
-                <p class="select-gender__button-content-desc">Женский</p>
+                <p class="select-gender__button-content-desc">Female</p>
               </div>
             </a>
-            <p class="select-gender__button-content-desc">или</p>
+            <p class="select-gender__button-content-desc">or</p>
             <a href="./quiz.html" class="select-gender__wrap select-gender__wrap--male">
               <div class="select-gender__button-background">
                 <div
@@ -78,7 +78,7 @@
                 <svg class="select-gender__button-content-icon" width="77" height="95">
                   <use href="./images/symbol-defs.svg#icon-gender-man"></use>
                 </svg>
-                <p class="select-gender__button-content-desc">Мужской</p>
+                <p class="select-gender__button-content-desc">Male</p>
               </div>
             </a>
           </div>
@@ -86,67 +86,65 @@
       </section>
       <section class="section motivation__section">
         <div class="container motivation__container">
-          <h2 class="motivation__heading">Добейтесь поставленных целей с нашей Keto-инструкцией</h2>
+          <h2 class="motivation__heading">Hit your goals with our Ultimate Keto Diet Guide</h2>
           <ul class="motivation__list">
             <li class="motivation__list-item">
               <img src="./images/list.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Список покупок на неделю</h3>
+              <h3 class="motivation__list-item-heading">Weekly Grocery List</h3>
               <p class="motivation__list-item-desc">
-                Не теряйте драгоценное время на планирование покупок, получите список продуктов на
-                неделю, чтобы готовить вкуснейшие блюда из вашего персонализированного Keto-плана с
-                простыми ингредиентами, которые вы можете купить в любом магазине.
+                Don’t waste precious time in planning your weekly groceries and get a downloadable
+                shopping list to cook all the delicious meals from your personal Keto plan with
+                simple ingredients you can buy from any local store.
               </p>
             </li>
             <li class="motivation__list-item">
               <img src="./images/gid.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Детальный гид по Keto</h3>
+              <h3 class="motivation__list-item-heading">Detailed Guide To Keto</h3>
               <p class="motivation__list-item-desc">
-                Самый полный пошаговый гид по Keto специально разработанный опытным
-                диетологом-нутрициологом, чтобы помочь вам достичь целей в здоровом темпе. Узнайте,
-                что точно подойдет для кето, едите вы дома или в ресторане.
+                A step-by-step complete guide in Keto specifically designed by an experienced
+                nutritionist to help you reach your goals at a healthy pace. Know exactly what is
+                Keto friendly whether you are eating out or at home.
               </p>
             </li>
             <li class="motivation__list-item">
               <img src="./images/dev.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Разработан специально для вас</h3>
+              <h3 class="motivation__list-item-heading">Designed For You</h3>
               <p class="motivation__list-item-desc">
-                Запутались в разнообразии низкоуглеводных диет? Позвольте нам подсчитать углеводы и
-                калории за вас и создать персонализированный план питания, основанный на ваших
-                любимых продуктах, вашем образе жизни, возрасте, параметрах и целях в весе.
+                Feeling confused about all the different low carb diet styles? Let us do the
+                calculation of carbs and calories for you and create a custom plan based on your
+                favorite food, lifestyle, age, measurements and body goals.
               </p>
             </li>
             <li class="motivation__list-item">
               <img src="./images/fast.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Быстрое приготовление блюд</h3>
+              <h3 class="motivation__list-item-heading">Quick Meal Preparation</h3>
               <p class="motivation__list-item-desc">
-                Интересные и простые в приготовлении Keto-рецепты с четкой информацией по пищевой
-                ценности, что превращает приготовление из простой домашней обязанности в идеальный
-                момент умиротворения. Чтобы стать кето-шефом не нужны никакие особые кухонные
-                принадлежности.
+                Fun and easy-to-follow Keto recipes with clear nutritional info that transform
+                cooking from just a chore into a craved moment of peace. No special kitchen
+                equipment needed to become a Keto chef.
               </p>
             </li>
             <li class="motivation__list-item">
               <img src="./images/subscribe.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Одна подписка – море пользы</h3>
+              <h3 class="motivation__list-item-heading">One Subscription To Rule Them All</h3>
               <p class="motivation__list-item-desc">
-                Получайте свежие рецепты каждый месяц прямо на свой любимый девайс, стабильно теряя
-                вес и подстраивайте план под свой прогресс (просто обратитесь в нашу службу
-                поддержки). Оставайтесь в курсе новинок и последних Keto-трендов с нашими
-                VIP-постами.
+                Receive fresh recipes each month right to your favorite device while enjoying
+                sustainable weight loss and adjust your plan based on your progress (just reach out
+                to our support). Stay in the know with the last Keto trends with our VIP posting.
               </p>
             </li>
             <li class="motivation__list-item">
               <img src="./images/free-profile.svg" width="50" height="50" />
-              <h3 class="motivation__list-item-heading">Мгновенный бесплатный профиль диеты</h3>
+              <h3 class="motivation__list-item-heading">Instant Free Diet Profile</h3>
               <p class="motivation__list-item-desc">
-                Сразу после заполнения опроса вы увидите свой индекс массы тела (ИМТ) и
-                метаболический возраст. Также вы получите рекомендации по поводу ежедневного
-                потребления калорий и воды. И все это бесплатно.
+                Immediately after filling your info at the quiz you are going to see your personal
+                Body Mass Index (BMI) and metabolic age. Get also recommendations on your daily
+                calorie and water intake. All of these for free.
               </p>
             </li>
           </ul>
           <div class="motivation__button-wrap">
-            <a class="motivation__button" href="#gender__box">Начать</a>
+            <a class="motivation__button" href="#gender__box">GET STARTED</a>
           </div>
         </div>
       </section>
@@ -155,16 +153,18 @@
       <div class="container footer__container">
         <ul class="footer__menu">
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="./measurements.html">Блог</a>
-          </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Политика защиты данных</a>
+            <a class="footer__menu-link" href="./measurements.html">Blog</a>
           </li>
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Обработка куки-файлов</a>
+            <a class="footer__menu-link" href="../src/conditions.html">General Conditions</a>
           </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="">Data Protection Policy</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="">Cookie policy</a>
+          </li>
+          <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li>
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
           ><svg class="logo logo--footer">
@@ -172,8 +172,8 @@
           </svg>
         </a>
         <div class="footer__license-wrap">
-          <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано Dimas IT</p>
+          <h3 class="footer__license-heading">2022 ALL RIGHTS RESERVED</h3>
+          <p class="footer__license-desc">Developed by Dimas IT</p>
           <button class="reset-button">Reset answers</button>
         </div>
       </div>
