--- a/src/index.html
+++ b/src/index.html
@@ -178,9 +178,13 @@
         </div>
       </div>
     </footer>
+    <div class="cookie__wrap">
+      <span class="cookie__wrap-desc">This website is using cookies to work properly.</span>
+      <a class="cookie__button cookie__button--accept" href="#" id="accept">I agree</a>
+      <a class="cookie__button" href="#" id="reject">Don`t agree</a>
+      <a class="cookie__button" href="#" id="read">Read policy</a>
+    </div>
     <script src="./index.js"></script>
     <!-- <script src="./js/menu.js"></script> -->
   </body>
 </html>
-
-//deploy
