--- a/src/conditions.html
+++ b/src/conditions.html
@@ -51,7 +51,7 @@
         </div>
       </section>
       <section class="section conditions__section">
-        <div class="container">
+        <div class="container conditions__container">
           <ul class="conditions__list">
             <!-- 1 -->
             <li class="conditions__item">
@@ -1129,19 +1129,19 @@
     <footer class="section footer__section">
       <div class="container footer__container">
         <ul class="footer__menu">
-          <li class="footer__menu-item">
+          <!-- <li class="footer__menu-item">
             <a class="footer__menu-link" href="./measurements.html">Blog</a>
-          </li>
+          </li> -->
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="../src/conditions.html">General Conditions</a>
           </li>
-          <li class="footer__menu-item">
+          <!-- <li class="footer__menu-item">
             <a class="footer__menu-link" href="">Data Protection Policy</a>
-          </li>
+          </li> -->
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Cookie policy</a>
+            <a class="footer__menu-link" href="../src/cookie.html">Cookie policy</a>
           </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li>
+          <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li> -->
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
           ><svg class="logo logo--footer">
