--- a/src/index.html
+++ b/src/index.html
@@ -152,19 +152,19 @@
     <footer class="section footer__section">
       <div class="container footer__container">
         <ul class="footer__menu">
-          <li class="footer__menu-item">
+          <!-- <li class="footer__menu-item">
             <a class="footer__menu-link" href="./measurements.html">Blog</a>
-          </li>
+          </li> -->
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="../src/conditions.html">General Conditions</a>
           </li>
-          <li class="footer__menu-item">
+          <!-- <li class="footer__menu-item">
             <a class="footer__menu-link" href="">Data Protection Policy</a>
-          </li>
+          </li> -->
           <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Cookie policy</a>
+            <a class="footer__menu-link" href="../src/cookie.html">Cookie policy</a>
           </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li>
+          <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="">Help center</a></li> -->
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
           ><svg class="logo logo--footer">
@@ -182,7 +182,7 @@
       <span class="cookie__wrap-desc">This website is using cookies to work properly.</span>
       <a class="cookie__button cookie__button--accept" href="#" id="accept">I agree</a>
       <a class="cookie__button" href="#" id="reject">Don`t agree</a>
-      <a class="cookie__button" href="#" id="read">Read policy</a>
+      <a class="cookie__button" href="../src/cookie.html" id="read">Read policy</a>
     </div>
     <script src="./index.js"></script>
     <!-- <script src="./js/menu.js"></script> -->
