--- a/src/quiz.html
+++ b/src/quiz.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/main.scss" />
+    <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css" />
     <title>quiz-1</title>
   </head>
   <body>
@@ -130,6 +131,19 @@
           </form>
         </div>
       </section>
+      <!-- <div class="help__modal-wrap">
+        <a href="#" class="help__modal-close-wrap">
+          <svg class="help__modal-close-icon">
+            <use href="./images/symbol-defs.svg#icon-close-modal"></use>
+          </svg>
+        </a>
+        <div class="help__modal-icon-wrap"></div>
+        <div class="help__modal-desc">
+          Your level of physical activity is the single most important factor which determines the
+          amount of food in your meal program. Please select the answer most closely corresponding
+          to your lifestyle in order to achieve your target weight.
+        </div>
+      </div> -->
       <section class="section progress__section">
         <div class="container progress__container">
           <div class="progress__percentage"><span class="progress__percentage-value">0</span>%</div>
@@ -157,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <button type="button" class="progress__button-link">
+            <button type="button" id="helpButton" class="progress__button-link">
               Help<svg class="progress__button-icon progress__button-icon--help">
                 <use
                   class="progress__button-svg"
@@ -168,32 +182,22 @@
           </div>
         </div>
       </section>
-    </main>
-    <!-- <footer class="section footer__section">
-      <div class="container footer__container">
-        <ul class="footer__menu">
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Блог</a></li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Политика защиты данных</a>
-          </li>
-          <li class="footer__menu-item">
-            <a class="footer__menu-link" href="">Обработка куки-файлов</a>
-          </li>
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
-        </ul>
-        <a class="logo-link logo-link--footer" href="./index.html"
-          ><svg class="logo logo--footer">
-            <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
-          </svg>
-        </a>
-        <div class="footer__license-wrap">
-          <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано Dimas IT</p>
+      <template>
+        <div class="help__modal-wrap">
+          <a href="#" class="help__modal-close-wrap">
+            <svg class="help__modal-close-icon">
+              <use href="./images/symbol-defs.svg#icon-close-modal"></use>
+            </svg>
+          </a>
+          <div id="help" class="help__modal-icon-wrap"></div>
+          <div class="help__modal-desc">
+            Your level of physical activity is the single most important factor which determines the
+            amount of food in your meal program. Please select the answer most closely corresponding
+            to your lifestyle in order to achieve your target weight.
+          </div>
         </div>
-      </div>
-    </footer> -->
-    <!-- <script src="./index.js"></script> -->
+      </template>
+    </main>
     <script src="./quiz.js"></script>
   </body>
 </html>
