--- a/src/registration.html
+++ b/src/registration.html
@@ -51,7 +51,7 @@
       </section>
       <section class="section quiz__section reg__section">
         <div class="container reg-container quiz-container quiz-container--card">
-          <form action="#" class="reg__form">
+          <form enctype="multipart/form-data" method="post" xw class="reg__form">
             <p class="reg__form-desc">
               Enter the e-mail address you want to receive your meal plan on:
             </p>
@@ -95,9 +95,58 @@
               </button>
             </div>
           </form>
+          <form
+            enctype="multipart/form-data"
+            method="post"
+            id="form"
+            onsubmit="send(event, 'send.php')"
+          >
+            <p>Имя</p>
+            <input placeholder="Представьтесь" name="name" type="text" />
+            <p>Email</p>
+            <input placeholder="Укажите почту" name="email" type="text" />
+            <p>Сообщение</p>
+            <textarea name="text"></textarea>
+            <p>Прикрепить файлы</p>
+            <input type="file" name="myfile[]" multiple id="myfile" />
+            <p><input value="Отправить" type="submit" /></p>
+          </form>
         </div>
       </section>
     </main>
     <script src="./registration.js"></script>
+    <script>
+      // Отправка данных на сервер
+      function send(event, php) {
+        console.log('Отправка запроса');
+        event.preventDefault ? event.preventDefault() : (event.returnValue = false);
+        var req = new XMLHttpRequest();
+        req.open('POST', php, true);
+        req.onload = function () {
+          if (req.status >= 200 && req.status < 400) {
+            json = JSON.parse(this.response); // Ебанный internet explorer 11
+            console.log(json);
+
+            // ЗДЕСЬ УКАЗЫВАЕМ ДЕЙСТВИЯ В СЛУЧАЕ УСПЕХА ИЛИ НЕУДАЧИ
+            if (json.result == 'success') {
+              // Если сообщение отправлено
+              alert('Сообщение отправлено');
+            } else {
+              // Если произошла ошибка
+              alert('Ошибка. Сообщение не отправлено');
+            }
+            // Если не удалось связаться с php файлом
+          } else {
+            alert('Ошибка сервера. Номер: ' + req.status);
+          }
+        };
+
+        // Если не удалось отправить запрос. Стоит блок на хостинге
+        req.onerror = function () {
+          alert('Ошибка отправки запроса');
+        };
+        req.send(new FormData(event.target));
+      }
+    </script>
   </body>
 </html>
