help button all

--- a/src/final.html
+++ b/src/final.html
@@ -726,7 +726,7 @@
             </div>
           </div>
           <div class="final__summary-button-wrap">
-            <button class="final__summary-button">GET KETO DIET</button>
+            <a  href="#registration" class="final__summary-button">GET KETO DIET</a>
           </div>
           <div class="card-wrap">
             <div class="final__summary-card">
