--- a/src/quiz.html
+++ b/src/quiz.html
@@ -157,8 +157,7 @@
                 <use
                   class="progress__button-svg"
                   href="./images/symbol-defs.svg#icon-back-circled"
-                ></use></svg
-              >Back
+                ></use></svg>Back
             </a>
             <div class="progress-bar__wrap">
               <div class="progress-bar__line">
