--- a/src/registration.html
+++ b/src/registration.html
@@ -51,7 +51,7 @@
       </section>
       <section class="section quiz__section reg__section">
         <div class="container reg-container quiz-container quiz-container--card">
-          <form  method="POST" action="./send.php" class="reg__form">
+          <form  method="POST" action="/send.php" class="reg__form">
             <p class="reg__form-desc">
               Enter the e-mail address you want to receive your meal plan on:
             </p>
